--- a/duchamp_reader/templates/pages/duchamp_sparqler.html
+++ b/duchamp_reader/templates/pages/duchamp_sparqler.html
@@ -47,7 +47,9 @@
                 <label for="id_isni" class="col-sm-2 col-form-label">Identifiant ISNI de l'artiste</label>
                 <input class="form-check-input" type="checkbox" name="id_isni" id="id_isni" value="id_isni"/>
             </div>
+            </div>
 
+            <div class="check">
             <!-- viaf ID -->
             <div class="form-check">
                 <label for="id_viaf" class="col-sm-2 col-form-label">Identifiant VIAF de l'artiste</label>
