--- a/duchamp_reader/templates/pages/rien_a_voir.html
+++ b/duchamp_reader/templates/pages/rien_a_voir.html
@@ -10,27 +10,27 @@
     <!-- corps du texte -->
     <p>Sélectionnez les données à visualiser </p>
 
-    <form class="form" method="POST" action="{{ url_for('rien_a_voir') }}">
+    <form id="rienavoir" class="form" method="POST" action="{{ url_for('rien_a_voir') }}">
 
         <!-- données à afficher -->
-        <div class="col-sm-10 dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <label for="axis" class="col-sm-2 col-form-label">Données en abscisse</label>
+        <div class="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <label for="axis" class="label">Données en abscisse</label>
             <select type="text" class="form-select" id="axis" name="axis" aria-expanded="false">
                 <option value="None">Sélectionner...</option>
-                <option value="theme_count">Thèmes par an</option>
-                <option value="galerie_count">Galeries par an</option>
+                <option value="theme_count">Répartition des thèmes par an</option>
+                <option value="galerie_count">Représentation des galeries par an</option>
                 <option value="pays_count">Nombre de nominé.e.s par pays et par an</option>
             </select>
         </div>
 
         <!-- type de graphique -->
-        <div class="col-sm-10 dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <label for="graph" class="col-sm-2 col-form-label">Type de graphique</label>
+        <div class="dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <label for="graph" class="label">Type de graphique</label>
             <select type="text" class="form-select" id="graph" name="graph" aria-expanded="false">
                 <option value="None">Sélectionner...</option>
-                <option value="FFF">F</option>
-                <option value="GGG">G</option>
-                <option value="HHH">H</option>
+                <option value="bar">Diagramme à barres</option>
+                <option value="plot">Diagramme à courbes</option>
+                <option value="scatter">Graphique en nuages de points</option>
             </select>
         </div>
 
